--- a/src/app/modules/producto/componentes/carrusel/carrusel.component.html
+++ b/src/app/modules/producto/componentes/carrusel/carrusel.component.html
@@ -7,7 +7,7 @@
                     <img src="/proyecto/src/assets/cardsauriculares/a.inalm1.png" class="d-block w-100" alt="Primer item">
                 </div>
                 <div class="carousel-item" *ngFor="let producto of productoCarrusel">
-                    <img src="{{producto.Imagen}}" class="d-block w-100" alt="{{producto.Alt}}">
+                    <img src="{{producto.Imagen}}" alt="{{producto.Alt}}">
                 </div>
             </div>
   
