--- a/src/app/modules/producto/componentes/card-teclados/card-teclados.component.html
+++ b/src/app/modules/producto/componentes/card-teclados/card-teclados.component.html
@@ -6,7 +6,7 @@
 
             <div class="card-body">
                 <h5 class="card-title">{{producto.Nombre}}</h5>
-                <p class="card-text">{{producto.Precio}}</p>
+                <p class="card-text">{{producto.Precio}}$</p>
 
                 <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" 
                 data-bs-target="#modalCardAuriculares" (click)="mostrarVer(producto)">
