--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,7 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  
 }
 
 
@@ -39,6 +40,7 @@ body {
 
 body {
   transition: all 1.5 ease;
+
 }
 
 #toggle {
@@ -51,10 +53,7 @@ body {
 }
 
 .dark {
-
-  background: rgb(36, 13, 0);
-  background: linear-gradient(90deg, rgba(36, 13, 0, 1) 0%, rgba(84, 63, 45, 1) 35%, rgba(106, 74, 42, 1) 72%, rgba(79, 68, 25, 1) 100%);
-
+  background-color: black;
 
   color: white;
   transition: all 1.5 ease;
@@ -63,3 +62,7 @@ body {
 * {
   color: rgb(0, 0, 0);
 }
+/*
+  background: rgb(36, 13, 0);
+  background: linear-gradient(90deg, rgba(36, 13, 0, 1) 0%, rgba(84, 63, 45, 1) 35%, rgba(106, 74, 42, 1) 72%, rgba(79, 68, 25, 1) 100%);
+*/
