--- a/src/app/modules/inicio/pages/inicio/inicio.component.html
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.html
@@ -28,7 +28,7 @@
 
     <div class="carousel-item">
       <a routerLink="/Teclados" >
-        <img src="./assets/fotos-inicio/teclado.jpg" class="d-block w-100"  alt="...">
+        <img src="./assets/fotos-inicio/teclado.png" class="d-block w-100"  alt="...">
       </a>
     </div>
   </div>
