--- a/src/app/modules/shared/components/navbar/navbar.component.html
+++ b/src/app/modules/shared/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
 
   <div>
-    <img mat-card-image  src="./assets/logos/c (2).png" alt="">
+    <img mat-card-image  src="./assets/logos/c (2).png" alt="" class="logo">
   </div>
   <!-- Menú desplegable para cuando la pantalla sea menor a 700px -->
     <button id="menuSecciones" mat-icon-button class="example-icon" [matMenuTriggerFor]="seccion">
