--- a/src/app/modules/producto/pages/auriculares/auriculares.component.css
+++ b/src/app/modules/producto/pages/auriculares/auriculares.component.css
@@ -63,4 +63,8 @@ img.mat-card-image {
 h1{
     display: flex;
     justify-content: center;
+    font-family: "Kanit", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    
 }
