--- a/src/app/modules/producto/pages/teclados/teclados.component.css
+++ b/src/app/modules/producto/pages/teclados/teclados.component.css
@@ -1,6 +1,9 @@
 h1{
     display: flex;
     justify-content: center;
-    background: rgb(103,98,35);
-background: linear-gradient(90deg, rgba(103,98,35,1) 7%, rgba(120,116,30,1) 32%, rgba(111,103,26,1) 52%, rgba(101,81,32,1) 73%, rgba(112,97,28,1) 100%);
+   color: rgb(97, 23, 112);
+    font-family: "Kanit", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+  
 }
