--- a/src/app/modules/shared/components/navbar/navbar.component.css
+++ b/src/app/modules/shared/components/navbar/navbar.component.css
@@ -11,8 +11,8 @@
 /* CORRESPONDEN A PANTALLAS MÁS PEQUEÑAS -> ej.: celulares */
 @media (min-width: 300px) and (max-width: 700px) {
     mat-toolbar {
-        background: rgb(2, 0, 36);
-        background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(25, 5, 112, 1) 38%, rgba(24, 30, 139, 1) 67%, rgba(64, 24, 121, 1) 85%, rgba(45, 0, 107, 1) 100%);
+        background: rgb(99,99,122);
+        background: linear-gradient(90deg, rgba(99,99,122,1) 0%, rgba(74,74,125,1) 27%, rgba(95,85,171,1) 50%, rgba(32,17,34,1) 100%);
         color: antiquewhite;
     }
 
@@ -28,9 +28,10 @@
 /* ENCAPSULA ESTILOS PARA PANTALLAS MÁS GRANDES -> ej.: computadora, televisor */
 @media (min-width: 700px) {
     mat-toolbar {
-        background: rgb(80,37,13);
-        background: linear-gradient(90deg, rgba(80,37,13,1) 0%, rgba(110,73,43,1) 35%, rgba(156,116,76,1) 72%, rgba(150,104,77,1) 100%);
+        background: rgb(99,99,122);
+background: linear-gradient(90deg, rgba(99,99,122,1) 0%, rgba(74,74,125,1) 27%, rgba(95,85,171,1) 50%, rgba(32,17,34,1) 100%);
         color: antiquewhite;
+       
     }
 
     #menuSecciones {
@@ -38,4 +39,23 @@
     }
 }
 
+
 /*cambiamos el color del navbar*/
+
+.span{
+    color: black;
+    
+}
+
+
+.logo {
+    width: 90px;  /* Ancho de 100 píxeles */
+    height: 90px; /* Alto de 100 píxeles */
+    object-fit: contain; /* Mantiene la proporción de la imagen */
+}
+
+button{
+    font-family: "Kanit", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
