--- a/src/app/modules/inicio/pages/inicio/inicio.component.html
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.html
@@ -1,7 +1,7 @@
+<h1 id="titulo">Kila</h1>
 <div class="outer-container">
   <div class="inner-container">
       <!-- Tu contenido va aquí -->
-
 
 <div id="carouselExampleIndicators" class="carousel slide">
   <div class="carousel-indicators">
@@ -47,5 +47,21 @@
 
 
 <!--card 2-->
+<div> 
+  <h1>Nosotros</h1>
+  <app-card></app-card> 
+  <mat-card class="example-card responsive-card" appearance="outlined">
+    <mat-card-header>
+      <mat-card-title-group>
+        <mat-card-content>
+        <img mat-card-xl-image src="./assets/fotos-inicio/descripcion.png"> <!-- Mueve la imagen aquí -->
+          <h2>kila</h2>
+          {{longText}}
+        </mat-card-content>
+      </mat-card-title-group>
+    </mat-card-header>
+  </mat-card>
+  
+  
+</div>
 
-<app-card></app-card>
