--- a/src/app/modules/producto/componentes/card-auriculares/card-auriculares.component.css
+++ b/src/app/modules/producto/componentes/card-auriculares/card-auriculares.component.css
@@ -1,26 +1,31 @@
 .custom-card {
-    height: 350px; /* Altura fija para todas las tarjetas */
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between; /* Distribuye el contenido uniformemente */
-    margin-bottom: 20px; /* Espacio vertical entre las tarjetas */
-    margin-right: 15px; /* Espacio horizontal entre las tarjetas */
-  }
-  
-  .custom-card .card-body {
-    text-overflow: ellipsis; /* Pone puntos suspensivos si el texto es largo */
-  }
-  
-  .card-img-top {
-    height: 250px; /* Tamaño para la imagen */
-    object-fit: cover; /* Ajusta la imagen sin distorsionarla */
-  }
-  .col {
-    margin-bottom: 30px; /* Asegura un mayor espacio entre las filas de tarjetas */
-  }
-  
-  .row {
-    margin-left: -15px; /* Ajuste para garantizar que las columnas no se junten al borde */
-    margin-right: -15px;
-  }
-  
+  height: 350px; /* Altura fija para todas las tarjetas */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; /* Distribuye el contenido uniformemente */
+  margin-bottom: 20px; /* Espacio vertical entre las tarjetas */
+}
+
+.custom-card .card-body {
+  text-overflow: ellipsis; /* Pone puntos suspensivos si el texto es largo */
+}
+
+.card-img-top {
+  height: 250px; /* Tamaño para la imagen */
+  object-fit: cover; /* Ajusta la imagen sin distorsionarla */
+}
+
+.col {
+  margin-bottom: 30px; /* Espacio entre filas de tarjetas */
+  margin: 15px; /* Espacio alrededor de cada tarjeta */
+  flex: 1 1 18rem; /* Asegura que cada tarjeta tenga un ancho mínimo y puede crecer */
+  max-width: 18rem; /* Limita el tamaño máximo de las tarjetas */
+}
+
+.row {
+  display: flex;
+  justify-content: center; /* Centra horizontalmente las tarjetas */
+  flex-wrap: wrap; /* Permite que las tarjetas se ajusten en filas si son demasiadas */
+  gap: 20px; /* Añade espacio uniforme entre las tarjetas */
+  padding: 0 20px; /* Asegura que las tarjetas no se peguen a los bordes del contenedor */
+}
