terminacion del crud y a medio terminar el componente mouses, falta agregar los productos con las direcciones

--- a/src/app/modules/producto/componentes/carrusel/carrusel.component.html
+++ b/src/app/modules/producto/componentes/carrusel/carrusel.component.html
@@ -2,10 +2,7 @@
 
   
         <div class="col">
-            <app-cards
-            (productoAgregado) = "productoAnadido($event)"
-            [productoReciente] = "product"
-            ></app-cards>
+            <app-cards (productoAgregado)="productoAnadido($event)" [productoReciente]="product"></app-cards>
         </div>
     </div>
   
