--- a/src/app/modules/producto/pages/mouses/mouses.component.html
+++ b/src/app/modules/producto/pages/mouses/mouses.component.html
@@ -1,1 +1,10 @@
-<p>mouses works!</p>
+<div class="container">
+    <div class="row">
+       
+        <h1>Mouses</h1>
+        <div class="col">
+           <app-card-mouses></app-card-mouses>
+        </div>
+    </div>
+  </div>
+ 
