--- a/src/app/modules/producto/pages/productos/productos.component.css
+++ b/src/app/modules/producto/pages/productos/productos.component.css
@@ -1,4 +1,10 @@
+h1 {
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
 
+color: linear-gradient(90deg, rgba(32,0,36,1) 0%, rgba(67,9,121,1) 44%, rgba(6,11,243,1) 80%, rgba(72,0,255,1) 100%);
+}
 
 app-carrusel{
   .container {
@@ -11,9 +17,7 @@ app-carrusel{
 }
 
       
-      h1 {
-        padding: 1rem;
-      }
+    
       
       /* Asegurar que los contenedores de las cards ocupen todo el alto disponible */
       .row {
