--- a/src/app/modules/inicio/pages/inicio/inicio.component.css
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.css
@@ -3,12 +3,21 @@ h1 {
     margin-bottom: 2px; /* Ajusta este valor para cambiar la separación entre el título y las imágenes */
     color: #4c2c82;
 }
+
 #titulo{
-    
-    font-size: 76px;
-    font-family: "Anton", sans-serif;
+  margin-top: 10px;
+    font-size: 45px;
+    font-family: "Sixtyfour Convergence", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
     font-style: normal;
-    margin-top: 25px;
+    font-variation-settings:
+      "BLED" 0,
+      "SCAN" 0,
+      "XELA" 0,
+      "YELA" 0;
+  color: #4c2c82;
+  
 }
 
 mat-card-image{
