--- a/src/app/modules/inicio/pages/inicio/inicio.component.html
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.html
@@ -44,9 +44,7 @@
   </div>
 
 <!--card 1-->
-<img src="./assets/cardmouses/mouse1.png" alt="">
 
-<!--card 2-->
 <div> 
   <h1>Nosotros</h1>
   <app-card></app-card> 
@@ -62,6 +60,24 @@
     </mat-card-header>
   </mat-card>
   
-  
+
+  <!--ofertas-->
+<!--card 2-->
+<h2>Ofertas</h2>
+ <div class="containercard">
+   <div class="card" style="width: 18rem;">
+     <div class="card-body">
+     <img src="./assets/fotos-inicio/ofertas1.png" class="card-img-top" alt="...">
+     </div>
+   </div>
+   
+   <div class="card" style="width: 18rem;">
+     <div class="card-body">
+     <img src="./assets/fotos-inicio/ofertas2.png" class="card-img-top" alt="...">
+     </div>
+   </div>
+ </div>
+
+
 </div>
 
