--- a/src/app/modules/inicio/pages/inicio/inicio.component.html
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.html
@@ -1,4 +1,4 @@
-<h1 id="titulo">Kila</h1>
+
 <div class="outer-container">
   <div class="inner-container">
       <!-- Tu contenido va aquí -->
@@ -53,7 +53,7 @@
       <mat-card-title-group>
         <mat-card-content>
         <img mat-card-xl-image src="./assets/fotos-inicio/descripcion.png"> <!-- Mueve la imagen aquí -->
-          <h2>kila</h2>
+          <h2>TechZone</h2>
           {{longText}}
         </mat-card-content>
       </mat-card-title-group>
