colocamos fotos con mejor resolucion

--- a/src/app/modules/inicio/pages/inicio/inicio.component.html
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.html
@@ -46,14 +46,14 @@
 <!--card 1-->
 
 <div> 
-  <h1>Nosotros</h1>
+  <span class="title">TechZone</span>
   <app-card></app-card> 
   <mat-card class="example-card responsive-card" appearance="outlined">
     <mat-card-header>
       <mat-card-title-group>
         <mat-card-content>
         <img mat-card-xl-image src="./assets/fotos-inicio/descripcion.png"> <!-- Mueve la imagen aquí -->
-          <h2>TechZone</h2>
+          <h2 class="title" >TechZone</h2>
           {{longText}}
         </mat-card-content>
       </mat-card-title-group>
@@ -63,7 +63,7 @@
 
   <!--ofertas-->
 <!--card 2-->
-<h2>Ofertas</h2>
+<h2 class="title">Ofertas</h2>
  <div class="containercard">
    <div class="card" style="width: 18rem;">
      <div class="card-body">
